# autotype

./: autotype.cabal
System/Automation/: Type.hs
